<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipmeActivity" >

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/amount_text"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/tip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onCalculateTip"
        android:text="@string/tip_two" />

    <Button
        android:id="@+id/tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tip2"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/tip2"
        android:onClick="onCalculateTip"
        android:text="@string/tip_one" />

    <Button
        android:id="@+id/tip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tip2"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tip2"
        android:onClick="onCalculateTip"
        android:text="@string/tip_three" />

    <TextView
        android:id="@+id/finalTipView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" 
		android:textColor="#27B814"
		android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/amount"
        android:layout_alignLeft="@+id/tip1"
        android:text="@string/dollar"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="6dp" />

    <TextView
        android:id="@+id/final_tip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dollarSign"
        android:layout_below="@+id/tip2"
        android:layout_marginTop="41dp"
        android:text="@string/final_tip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/final_tip_label"
        android:layout_toRightOf="@+id/final_tip_label"
        android:layout_marginLeft="6dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
